<?xml version="1.0"?>
<package>
  <name>glider_drivers</name>
  <version>1.0.0</version>
  <description>
	The glider_drivers metapackage that installs all the glider Drivers
	
	Institute for Systems and Robotics
	Instituto Superior Tecnico
	Lisbon, Portugal
  </description>

  <maintainer email="dsor.isr@gmail.com">DSOR Team</maintainer>

  <license>MIT</license>

  <url type="website">http://dsor.isr.tecnico.ulisboa.pt</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>leak_detector</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
