<?xml version="1.0"?>
<package format="2">
  <name>mca_comm</name>
  <version>1.2.0</version>
  <description>ROS wrapper for the Linux MCA communication library and command line tool</description>
  <maintainer email="amallios@ploatech.com">Angelos Mallios</maintainer>
  <author email="amallios@ploatech.com">Angelos Mallios</author>
  <url type="website">https://www.gbs-elektronik.de/en/downloads/downloads-nuclear-measurements.php</url>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
