<?xml version="1.0"?>
<package>
  <name>parallel_port</name>
  <version>1.0.0</version>
  <description>The parallel_port reader and writter</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <author email="jorgeeribeiro@gmail.com">Jorge Ribeiro</author>
  <author email="miguel.silva.ribeiro@tecnico.ulisboa.pt">Miguel Ribeiro</author>
  <author email="henrique.ribeiro@tecnico.ulisboa.pt">Henrique Silva</author>

  <license>MIT</license>

  <url type="website">http://dsor.isr.ist.utl.pt/</url>
  <url type="repository">https://github.com/dsor-isr/medusa_drivers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>farol_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>farol_gimmicks_library</build_depend>
  <run_depend>farol_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>farol_gimmicks_library</run_depend>

</package>
