<?xml version="1.0"?>
<package format="2">
 <name>glider_diagnostics_library</name>
 <version>1.0.0</version>
 <description>Diagnostics Library</description>

 <license>MIT</license>

 <maintainer email="dsor@gmail.com">DSOR Team</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>message_generation</build_depend>
 <exec_depend>message_runtime</exec_depend>

 <depend>roscpp</depend>
 <depend>std_msgs</depend>

 <depend>diagnostic_msgs</depend>

</package>
